--- a/src/html/twassigment.html
+++ b/src/html/twassigment.html
@@ -7,15 +7,14 @@
     <link href="../../dist/output.css" rel="stylesheet">
     </head>
 <body>
-    <!-- <h1 class="text-3xl font-bold underline">
-        Hello world!
-      </h1> -->
-   
-      <div class="md:flex"> <!-- Use md:flex to change layout on desktop -->
-        <div class="bg-blue-500 w-32 h-32 m-2"></div> <!-- First box with blue background -->
-        <div class="bg-green-500 w-32 h-32 m-2"></div> <!-- Second box with green background -->
-        <div class="bg-red-500 w-32 h-32 m-2"></div> <!-- Third box with red background -->
-    </div>
+  
+      <div class="flex justify-center items-center min-h-screen"> <!-- Centering wrapper -->
+        <div class="md:flex"> 
+          <div class="bg-blue-500 w-32 h-32 m-2"></div> <!-- First box with blue background -->
+          <div class="bg-green-500 w-32 h-32 m-2"></div> <!-- Second box with green background -->
+          <div class="bg-red-500 w-32 h-32 m-2"></div> <!-- Third box with red background -->
+      </div></div>
+</div>
     
 </body>
 </html>
